--- a/app/13order/views/areaOrderList.html
+++ b/app/13order/views/areaOrderList.html
@@ -4,16 +4,16 @@
 			<div class="form-group form-inline">
 				<div class="col-sm-12">
 					<div class="row ">
-						<input type="text" class="form-control" ng-model="searchform.code" placeholder="订单编号"> &nbsp;&nbsp;&nbsp;&nbsp;
-						<input type="text" class="form-control" ng-model="searchform.keyword" placeholder="订单标题"> &nbsp;&nbsp;&nbsp;&nbsp;
-						<input type="text" class="form-control" ng-model="searchform.cardno" placeholder="身份证号"> &nbsp;&nbsp;&nbsp;&nbsp;
-						<input type="text" class="form-control" ng-model="searchform.name" placeholder="姓名"> &nbsp;&nbsp;&nbsp;&nbsp;
+						<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.code" placeholder="订单编号"> &nbsp;&nbsp;&nbsp;&nbsp;
+						<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.keyword" placeholder="订单标题"> &nbsp;&nbsp;&nbsp;&nbsp;
+						<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.cardno" placeholder="身份证号"> &nbsp;&nbsp;&nbsp;&nbsp;
+						<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.name" placeholder="姓名"> &nbsp;&nbsp;&nbsp;&nbsp;
 					</div>
 					<div class="row mt10">
-						<input type="text" class="form-control" ng-model="searchform.company_code" placeholder="机构编号"> &nbsp;&nbsp;&nbsp;&nbsp;
-						<input type="text" class="form-control" ng-model="searchform.login_name" placeholder="登录帐号"> &nbsp;&nbsp;&nbsp;&nbsp;
-						<input type="text" class="form-control" ng-model="searchform.note" placeholder="备注"> &nbsp;&nbsp;&nbsp;&nbsp;
-						<input type="text" class="form-control" ng-model="searchform.mobile" placeholder="电话"> &nbsp;&nbsp;&nbsp;&nbsp;
+						<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.company_code" placeholder="机构编号"> &nbsp;&nbsp;&nbsp;&nbsp;
+						<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.login_name" placeholder="登录帐号"> &nbsp;&nbsp;&nbsp;&nbsp;
+						<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.note" placeholder="备注"> &nbsp;&nbsp;&nbsp;&nbsp;
+						<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.mobile" placeholder="电话"> &nbsp;&nbsp;&nbsp;&nbsp;
 					</div>
 					<div class="row mt10">
 						<label>下单时间</label>&nbsp;&nbsp;
