--- a/app/07product/views/splist.html
+++ b/app/07product/views/splist.html
@@ -3,16 +3,16 @@
 		<div class="panel-body">
 			<div class="form-group ">
 				<div class="col-sm-12">
-						<label class="control-label pull-left">产品名称</label>
-					<div class="col-sm-3">
-						<input type="text" class="form-control" ng-model="searchform.name" ng-keyup="myKeyup($event)">
+						<!--<label class="control-label pull-left">产品名称</label>-->
+					<div class="col-sm-2">
+						<input type="text" class="form-control" placeholder="产品名称" ng-model="searchform.name" ng-keyup="myKeyup($event)">
 					</div>
-						<label class="control-label pull-left">产品编号</label>
-					<div class="col-sm-3">
-						<input type="text" class="form-control" ng-model="searchform.code" ng-keyup="myKeyup($event)">
+						<!--<label class="control-label pull-left">产品编号</label>-->
+					<div class="col-sm-2">
+						<input type="text" class="form-control" placeholder="产品编号" ng-model="searchform.code" ng-keyup="myKeyup($event)">
 					</div>
-						<label class="control-label pull-left">产品编号</label>
-					<div class="col-sm-3">
+						<!--<label class="control-label pull-left">选择景区</label>-->
+					<div class="col-sm-2">
 						<ui-select ng-model="searchform.place_code" theme="bootstrap" ng-keyup="myKeyup($event)">
 							<ui-select-match placeholder="请选择一个景区">
 								{{$select.selected.name}}
@@ -22,8 +22,23 @@
 							</ui-select-choices>
 						</ui-select>
 					</div>
+					<div class="col-sm-2 ">
+						<select class="form-control" ng-model="searchform.sale_category" ng-keyup="myKeyup($event)" ng-options="item.value as item.label for item in dictbytypelist">
+							<option value="">--产品分类--</option>
+	            		</select>
+					</div>
+					<!--<label class="control-label pull-left">产品状态</label>-->
+					<div class="col-sm-2 ">
+						<select class="form-control" ng-model="searchform.state" ng-keyup="myKeyup($event)">
+							<option value="">--产品状态--</option>
+							<option value="0">草稿</option>
+							<option value="1">上架</option>
+							<option value="2">下架</option>
+	            		</select>
+					</div>
 					<!--<input type="text" class="form-control" ng-model="searchform.place_code">-->
 					<a class="btn btn-info pull-right new" ng-click="create()">创建产品</a>
+					<button type="submit" class="btn btn-default search pull-right" ng-click="load()">立即搜索</button>
 				</div>
 				<!--<div class="col-sm-2 text-right">-->
 				<!--</div>-->
@@ -32,22 +47,22 @@
 			</div>
 			<div class="form-group">
 				<div class="col-sm-12">
-					<label class="control-label pull-left">产品分类</label>
-					<div class="col-sm-2 ">
+					<!--<label class="control-label pull-left">产品分类</label>-->
+					<!--<div class="col-sm-2 ">
 						<select class="form-control" ng-model="searchform.sale_category" ng-keyup="myKeyup($event)" ng-options="item.value as item.label for item in dictbytypelist">
-							<option value="">----全部----</option>
+							<option value="">--产品分类--</option>
 	            		</select>
-					</div>
-					<label class="control-label pull-left">产品状态</label>
-					<div class="col-sm-2 ">
+					</div>-->
+					<!--<label class="control-label pull-left">产品状态</label>-->
+					<!--<div class="col-sm-2 ">
 						<select class="form-control" ng-model="searchform.state" ng-keyup="myKeyup($event)">
-							<option value="">----全部----</option>
+							<option value="">--产品状态--</option>
 							<option value="0">草稿</option>
 							<option value="1">上架</option>
 							<option value="2">下架</option>
 	            		</select>
-					</div>
-					<button type="submit" class="btn btn-default search pull-right" ng-click="load()">立即搜索</button>
+					</div>-->
+					<!--<button type="submit" class="btn btn-default search pull-right" ng-click="load()">立即搜索</button>-->
 				</div>
 			</div>
 		</div>
@@ -68,7 +83,7 @@
 		<tbody>
 			<tr ng-repeat="obj in objs">
 				<td class="">
-					产品名称：{{obj.name}}<br> 产品编号：{{obj.code}}
+					产品名称：{{obj.name_inside}}<br> 产品编号：{{obj.code}}
 					<br> 成本价：{{obj.cost_price}} 元 / 指导价：{{obj.guide_price}} 元 / 市场价：{{obj.market_price}} 元
 				</td>
 				<td class="text-center">
