--- a/app/14statistics/views/countByCompny.html
+++ b/app/14statistics/views/countByCompny.html
@@ -66,7 +66,7 @@
 							&nbsp;&nbsp;&nbsp;&nbsp;
 							<div class="input-group">
 								<!--<label class="control-label">产品名称：</label>-->
-								<input type="text" class="form-control" ng-model="searchform.product_name" placeholder="产品名称">
+								<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.product_name" placeholder="产品名称">
 							</div>
 						</div>
 						<div class="row mt10">
