--- a/app/22busscustomer/views/skacountlist.html
+++ b/app/22busscustomer/views/skacountlist.html
@@ -37,12 +37,13 @@
         <th class="col-md-1 text-center">姓名</th>
         <th class="col-md-1 text-center">手机号</th>
         <th class="col-md-2 text-center">身份证号</th>
-        <th class="col-md-2 text-center">账号</th>
+        <th class="col-md-1 text-center">账号</th>
         <th class="col-md-1 text-center">区域</th>
         <th class="col-md-1 text-center">行业</th>
         <th class="col-md-1 text-center">申请时间</th>
         <th class="col-md-1 text-center">状态</th>
         <th class="col-md-1 text-center">短信状态</th>
+        <th class="col-md-1 text-center">图片</th>        
         <th class="col-md-1 text-center">操作</th>
       </tr>
     </thead>
@@ -57,6 +58,9 @@
         <td class="text-center">{{obj.ins_time}}</td>
         <td class="text-center">{{obj.state_name}}</td>
         <td class="text-center">{{obj.sms_state}}</td>
+        <td class="text-center">
+           <a ng-click="seepicture(obj.pimg)" class="btn btn-info btn-xs">查看图片</a>            
+        </td>      
         <td class="text-center">
            <a ng-show="obj.state_name=='未处理'&&obj.sms_state == '未发送'" ng-click="pass(obj.id,obj.ticket_id)" class="btn btn-danger btn-xs">通过</a>
            <a ng-show="obj.state_name=='未处理'&&obj.sms_state == '未发送'" ng-click="refuse(obj.id)" class="btn btn-danger btn-xs">拒绝</a>
