--- a/app/24juyougl/views/addplacehot.html
+++ b/app/24juyougl/views/addplacehot.html
@@ -20,7 +20,7 @@
 						<label class="col-xs-3 control-label">景区名称</label>
    						<div class="col-md-6">
 		   					<ui-select ng-model="searchform.selected" theme="bootstrap">
-								<ui-select-match placeholder="请选择一个销售品作为奖品">{{$select.selected.name}}</ui-select-match>
+								<ui-select-match placeholder="请选择一个景区">{{$select.selected.name}}</ui-select-match>
 								<ui-select-choices group-by="'place_name'" repeat="item in datas | filter: $select.search">
 									<span ng-bind-html="item.name | highlight: $select.search"></span>
 									<small ng-bind-html="item.code | highlight: $select.search"></small>
@@ -33,7 +33,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">景区简称</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入商品原价"
+							<input type="text" class="form-control" placeholder="请输入景区简称"
 							ng-model="info.name"
 							>
 						</div>
@@ -42,7 +42,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">促销描述</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入砍价目标"
+							<input type="text" class="form-control" placeholder="请输入促销描述"
 							ng-model="info.ms"
 							>
 						</div>
@@ -51,11 +51,26 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">排序</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入允许最大参与人数"
+							<input type="text" class="form-control" placeholder="请输入排序"
 							ng-model="info.asort"
 							>
 						</div>
 					</div>
+
+					<!--<div class="form-group">
+						<label for="lrl" class="col-xs-3 control-label">是否启用</label>
+						<div class="col-xs-2">
+							<div class="input-group">
+								<input class=""
+								bs-switch
+								type="checkbox" 
+								ng-model="useinfo.isSelected"
+								switch-size=""
+								ng-change = "change(useinfo.isSelected)"
+								> 
+							</div>
+						</div>					
+					</div>-->
 
 				</div>
 
