--- a/app/22busscustomer/views/skacountpicture.html
+++ b/app/22busscustomer/views/skacountpicture.html
@@ -12,10 +12,10 @@
     </div>  
     </div>                
 </div>
-<div class="modal-footer">
+<!--<div class="modal-footer">
     <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
     <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
-</div>
+</div>-->
 
 
 
