--- a/app/14statistics/views/countByCompny.html
+++ b/app/14statistics/views/countByCompny.html
@@ -45,18 +45,17 @@
 				<div class="form-group form-inline">
 					<div class="col-sm-12">
 						<div class="row mt10 ">
-							<label>时间</label>&nbsp;&nbsp;
-							<div class="input-group">
-								<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-click="open(section.start)"
+							<div class="col-xs-2">
+								<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-click="open(section.start)" placeholder="开始时间"
 								 ng-required="true" close-text="Close" readonly/>
 								<!--<span class="input-group-btn">
 									<button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
 									<button type="button" class="btn btn-default" ng-click="clearDate(section.start)"><i class="glyphicon glyphicon-remove"></i></button>
 								</span>-->
 							</div>
-							&nbsp;&nbsp;到&nbsp;&nbsp;
-							<div class="input-group">
-								<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.end.date" is-open="section.end.opened" ng-click="open(section.end)"
+							&nbsp;&nbsp;
+							<div class="col-xs-2">
+								<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.end.date" is-open="section.end.opened" ng-click="open(section.end)" placeholder="结束时间"
 								 ng-required="true" close-text="Close" readonly/>
 								<!--<span class="input-group-btn">
 									<button type="button" class="btn btn-default" ng-click="open(section.end)"><i class="glyphicon glyphicon-calendar"></i></button>
@@ -64,7 +63,7 @@
 								</span>-->
 							</div>
 							&nbsp;&nbsp;&nbsp;&nbsp;
-							<div class="input-group">
+							<div class="col-xs-2">
 								<!--<label class="control-label">产品名称：</label>-->
 								<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.product_name" placeholder="产品名称">
 							</div>
