充值回预存改成退回预存  L0002改成tuihui

--- a/app/06deposit/views/list.html
+++ b/app/06deposit/views/list.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="col-xs-4 text-right">
-                <button type="button" class="btn btn-default pull-right" ng-click="back()">充值回平台</button>
+                <button type="button" class="btn btn-default pull-right" ng-click="back()">退回预存</button>
                 <button type="button" class="btn btn-info new" ng-click="create()"
                 has-permission='createdeposit' 
                 >创建预存</button>
