--- a/app/14statistics/views/countByCompny.html
+++ b/app/14statistics/views/countByCompny.html
@@ -42,47 +42,38 @@
 	<div class="col-sm-8">
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<div class="form-group form-inline">
-					<div class="col-sm-12">
-						<div class="row mt10 ">
-							<div class="col-xs-2">
-								<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-click="open(section.start)" placeholder="开始时间"
-								 ng-required="true" close-text="Close" readonly/>
-								<!--<span class="input-group-btn">
-									<button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
-									<button type="button" class="btn btn-default" ng-click="clearDate(section.start)"><i class="glyphicon glyphicon-remove"></i></button>
-								</span>-->
-							</div>
-							&nbsp;&nbsp;
-							<div class="col-xs-2">
-								<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.end.date" is-open="section.end.opened" ng-click="open(section.end)" placeholder="结束时间"
-								 ng-required="true" close-text="Close" readonly/>
-								<!--<span class="input-group-btn">
-									<button type="button" class="btn btn-default" ng-click="open(section.end)"><i class="glyphicon glyphicon-calendar"></i></button>
-									<button type="button" class="btn btn-default" ng-click="clearDate(section.end)"><i class="glyphicon glyphicon-remove"></i></button>
-								</span>-->
-							</div>
-							&nbsp;&nbsp;&nbsp;&nbsp;
-							<div class="col-xs-2">
-								<!--<label class="control-label">产品名称：</label>-->
-								<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.product_name" placeholder="产品名称">
-							</div>
+				<div class="form-group">
+					<div class="col-xs-12">
+						<div class="col-xs-3" style="padding-left:0px;">
+							<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened"
+							 ng-click="open(section.start)" placeholder="开始时间" ng-required="true" close-text="Close" readonly/>
 						</div>
-						<div class="row mt10">
-							<label class="control-label">统计类型：</label>
+						<div class="col-xs-3 ">
+							<input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.end.date" is-open="section.end.opened"
+							 ng-click="open(section.end)" placeholder="结束时间" ng-required="true" close-text="Close" readonly/>
+						</div>
+						<div class="col-xs-3 ">
+							<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.product_name" placeholder="产品名称">
+						</div>
+					</div>
+					<div class="col-xs-12 mt10 form-inline">
+						<div class="col-xs-4 input-group">
+							<span class="input-group-addon">统计类型</span>
 							<select class="form-control" ng-model="searchform.company_type" placeholder="统计类型">
-								<option label="本级" value="1"></option>
-								<option label="下级" value="2"></option>
-								<option label="本级+下级" value="3"></option>
-							</select> &nbsp;&nbsp;&nbsp;&nbsp;
-							<label class="control-label">票类型：</label>
+									<option label="本级" value="1"></option>
+									<option label="下级" value="2"></option>
+									<option label="本级+下级" value="3"></option>
+								</select>
+						</div>&nbsp;&nbsp;
+						<div class="col-xs-4  input-group">
+							<span class="input-group-addon">票类型</span>
 							<select class="form-control" ng-model="searchform.ticket_type" placeholder="票类型">
-								<option label="电子票" value="1"></option>
-								<option label="团票" value="2"></option>
-							</select> &nbsp;&nbsp;&nbsp;&nbsp;
-							<button type="button btn" class="btn btn-default search pull-right btn-info" ng-click="exportToExcel('#Excel_table')">导出Excel</button>
-							<button type="button btn" class="btn btn-default search pull-right" ng-click="orderSearch()">立即搜索</button>
+									<option label="电子票" value="1"></option>
+									<option label="团票" value="2"></option>
+								</select>
 						</div>
+						<button type="button btn" class="btn btn-default search pull-right btn-info" ng-click="exportToExcel('#Excel_table')">导出Excel</button>
+						<button type="button btn" class="btn btn-default search pull-right" ng-click="orderSearch()">立即搜索</button>
 					</div>
 				</div>
 			</div>
@@ -90,7 +81,7 @@
 
 		<div class="col-xs-12" ng-if="item.list.length" ng-repeat="item in objs">
 			{{item.name}}({{item.code}})
-			<table  class="table table-bordered" ng-if="ticket_type_flag == 1" content="text/html; charset=utf-8">
+			<table class="table table-bordered" ng-if="ticket_type_flag == 1" content="text/html; charset=utf-8">
 				<thead>
 					<tr>
 						<th class="col-md-2 text-center">机构编码</th>
@@ -114,7 +105,7 @@
 					</tr>
 				</tbody>
 			</table>
-			<table  class="table table-bordered" ng-if="ticket_type_flag == 2" content="text/html; charset=utf-8">
+			<table class="table table-bordered" ng-if="ticket_type_flag == 2" content="text/html; charset=utf-8">
 				<thead>
 					<tr>
 						<th class="col-md-2 text-center">机构编码</th>
