--- a/app/14statistics/views/countByCompny.html
+++ b/app/14statistics/views/countByCompny.html
@@ -85,7 +85,7 @@
 			</div>
 		</div>
 
-		<div class="col-xs-12" ng-if="item.list.length" ng-repeat="item in objs">
+		<div class="col-xs-12  pre-scrollable" ng-if="item.list.length" ng-repeat="item in objs">
 			{{item.name}}({{item.code}})
 			<table class="table table-bordered" ng-if="ticket_type_flag == 1" content="text/html; charset=utf-8">
 				<thead>
