--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -155,6 +155,17 @@
 					</div>					
 				</div>
 
+				<br/>
+					<br/>
+				<div class="col-xs-12 form-group">
+					<div class="col-xs-2">
+						<label for="lrl" class="pull-right text-right mt10">商品详情&nbsp;&nbsp;&nbsp;&nbsp;</label>
+					</div>
+					<div class="col-xs-7">
+					 	<div class="ueditor" ng-model="salefrobj.sk_imginfo"></div>      
+					</div>					
+				</div>
+
 				<!--<br/>
 					<br/>-->
 				<!--<div class="col-xs-12 form-group">
