--- a/app/07product/views/tkttype.html
+++ b/app/07product/views/tkttype.html
@@ -58,7 +58,7 @@
         <td class="text-center">
 		      <a ng-show="obj.state=='1'" ng-click="start(obj.id)" class="btn btn-primary btn-xs">下架</a>
           <a ng-show="obj.state=='0'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">上架</a>
-          <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
+          <a ng-click="edit(obj.id, obj.place_code)" class="btn btn-success btn-xs">编辑</a>
           <a ng-show="obj.used_state=='1'" ng-click="usedstart(obj.id)" class="btn btn-primary btn-xs">允许消票</a>
           <a ng-show="obj.used_state=='0'" ng-click="usedstop(obj.id)" class="btn btn-danger btn-xs">禁止消票</a>
           <!--<a ng-click="auth(obj.code)" class="btn btn-warning btn-xs">消票权限</a>-->
