修改销售品分润设置为商客专用设置

--- a/app/07product/views/product.html
+++ b/app/07product/views/product.html
@@ -35,7 +35,7 @@
 			<productintegral saleobj="saleobj" util="util"></productintegral>
 		</uib-tab>
 
-		<uib-tab index="7" heading="销售品分润设置" ng-if="saleobj.id !== '' && funobj.hasOwnProperty('skprice')">
+		<uib-tab index="7" heading="商客专用设置" ng-if="saleobj.id !== '' && funobj.hasOwnProperty('skprice')">
 			<productshareprofit saleobj="saleobj" util="util"></productshareprofit>
 		</uib-tab>
 
