--- a/app/07product/views/productInfo.html
+++ b/app/07product/views/productInfo.html
@@ -80,7 +80,7 @@
 
 		<div index="7" heading="销售品分润设置" ng-if="saleobj.id !== '' && funobj.hasOwnProperty('skprice')">
 			<div class="panel panel-default">
-				<div class="panel-heading">销售品分润设置</div>
+				<div class="panel-heading">商客专用设置</div>
 				<div class="panel-body">
 					<productinfoshareprofit saleobj="saleobj" util="util"></productinfoshareprofit>
 				</div>
