--- a/app/09place/views/p_store.html
+++ b/app/09place/views/p_store.html
@@ -11,9 +11,9 @@
 	<div class="col-xs-12 col-md-12 mt10" >
 
 		<div class="form-group" >
-			<label class="col-sm-3 col-xs-12 control-label">标签</label>
+			<label class="col-sm-3 col-xs-12 control-label">商户类型标签</label>
 			<div class="col-sm-9 col-xs-12">
-				<input type="text" class="form-control" placeholder="标签之间以逗号分隔开" 
+				<input type="text" class="form-control" placeholder="(商户类型)标签之间以逗号分隔开" 
 				ng-model="storeobj.merchant_label"
 				>
 			</div>
@@ -67,7 +67,7 @@
 		</div>
 
 		<div class="form-group" >
-			<label class="col-sm-3 col-xs-12 control-label">标签</label>
+			<label class="col-sm-3 col-xs-12 control-label">标签(打标)</label>
 			<div class="col-sm-9 col-xs-12">
 				<input type="text" class="form-control" 
 				ng-model="storeobj.merchant_label_marking"
@@ -86,7 +86,7 @@
 				</label>-->
 				<input type="text" class="form-control" 
 				ng-model="storeobj.merchant_pay_method"
-				placeholder="付款方式之间以逗号分隔开">
+				placeholder="付款方式之间以逗号分隔开(如:电子票,到店付)">
 			</div>
 		</div>
 
