修改景区和商户的基本信息

--- a/app/07product/views/productinfoshareprofit.html
+++ b/app/07product/views/productinfoshareprofit.html
@@ -164,7 +164,7 @@
 				<br/>
 				<div class="col-xs-12 form-group">
 					<div class="col-xs-2">
-						<label for="lrl" class="pull-right text-right mt10">商品图片&nbsp;&nbsp;&nbsp;&nbsp;</label>
+						<label for="lrl" class="pull-right text-right mt10">商客商品详情&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
 					<div class="col-xs-8">
 						<div class="ueditor" ng-model="salefrobj.sk_imginfo"></div>      
