--- a/app/09place/views/p_baseinfo.html
+++ b/app/09place/views/p_baseinfo.html
@@ -29,6 +29,15 @@
 		</div>
 
 		<div class="form-group" >
+			<label class="col-sm-3 col-xs-12 control-label">电话</label>
+			<div class="col-sm-9 col-xs-12">
+				<input type="text" class="form-control"
+				ng-model="placeobj.mobile"
+				>
+			</div>
+		</div>
+
+		<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">地址</label>
 			<div class="col-sm-9 col-xs-12">
 				<input type="text" class="form-control"
@@ -39,17 +48,8 @@
 
 		<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">简介</label>
-			<div class="col-sm-9 col-xs-12">
-				<!-- <textarea class="form-control" rows="4"
-				ng-model="placeobj.content"
-				></textarea> -->
-			</div>
-		</div>
-
-		<div class="form-group" >
-			<label class="col-sm-3 col-xs-12 control-label">简介</label>
-			<div class="col-sm-9 col-xs-12">
-				<div class="ueditor" ng-model="placeobj.content"></div>
+			<div class="col-sm-9">
+				<div text-angular ng-model="placeobj.content"></div>
 			</div>
 		</div>
 		
