--- a/app/09place/views/p_store.html
+++ b/app/09place/views/p_store.html
@@ -38,14 +38,14 @@
 			</div>
 		</div>
 
-		<div class="form-group" >
+		<!--<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">电话</label>
 			<div class="col-sm-9 col-xs-12">
 				<input type="text" class="form-control" 
 				ng-model="storeobj.tel"
 				>
 			</div>
-		</div>
+		</div>-->
 
 		<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">商铺活动</label>
