--- a/app/09place/views/p_view.html
+++ b/app/09place/views/p_view.html
@@ -10,14 +10,14 @@
 
 	<div class="col-xs-12 col-md-12 mt10" >
 
-		<div class="form-group" >
+		<!--<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">电话</label>
 			<div class="col-sm-9 col-xs-12">
 				<input type="text" class="form-control" placeholder="请输入名称" 
 				ng-model="viewobj.tel"
 				>
 			</div>
-		</div>
+		</div>-->
 
 
 		<div class="form-group" >
