--- a/app/22busscustomer/views/appointmentlist.html
+++ b/app/22busscustomer/views/appointmentlist.html
@@ -21,10 +21,11 @@
     <thead>
       <tr>
         <th class="col-md-2 text-center">产品名称</th>
-        <th class="col-md-2 text-center">票种名称</th>
+        <th class="col-md-1 text-center">票种名称</th>
         <th class="col-md-4 text-center">时间</th>
         <th class="col-md-2 text-center">标题</th>
         <th class="col-md-1 text-center">库存</th>
+        <th class="col-md-1 text-center">排序</th>        
         <th class="col-md-1 text-center">操作</th>
       </tr>
     </thead>
@@ -35,6 +36,7 @@
         <td class="text-center">{{obj.startTime}}-{{obj.endTime}}</td>
         <td class="text-center">{{obj.title}}</td>
         <td class="text-center">{{obj.stock_num}}</td>
+        <td class="text-center">{{obj.asort}}</td>        
         <td class="text-center">
             <a ng-click="edit(obj.id)" class="btn btn-info btn-xs">修改</a>
             <a ng-click="delete(obj.id)" class="btn btn-danger btn-xs">删除</a>
