--- a/app/22busscustomer/views/setappointment.html
+++ b/app/22busscustomer/views/setappointment.html
@@ -88,6 +88,15 @@
 						</div>
 					</div>
 
+					<div class="form-group">
+						<label class="col-xs-3 control-label">排序</label>
+						<div class="col-xs-6">
+							<input type="text" class="form-control" placeholder="请输入库存"
+							ng-model="info.asort"
+							>
+						</div>
+					</div>
+
 					
 
 				</div>
