--- a/app/22busscustomer/views/vouchersalecreate.html
+++ b/app/22busscustomer/views/vouchersalecreate.html
@@ -42,12 +42,21 @@
 
 					<div class="form-group" >
 						<label class="col-xs-3 control-label">所属商家</label>
-						<div class="col-xs-9" >
+						<!--<div class="col-xs-9" >
 							<select class="form-control" ng-model="obj.business_code"
 				              ng-options="business.code as business.name for business in businessarr"
 				            >
 				            </select>
-						</div>
+						</div>-->
+						<div class="col-md-9">
+		   					<ui-select ng-model="searchform.selected" theme="bootstrap">
+								<ui-select-match placeholder="请选择一个商家">{{$select.selected.name}}</ui-select-match>
+								<ui-select-choices group-by="'place_name'" repeat="item in businessarr | filter: $select.search">
+									<span ng-bind-html="item.name | highlight: $select.search"></span>
+									<!--<small ng-bind-html="item.code | highlight: $select.search"></small>-->
+								</ui-select-choices>
+		                    </ui-select>				
+   						</div> 
 					</div>
 
 					<div class="form-group" >
@@ -59,6 +68,8 @@
 				            </select>
 						</div>
 					</div>
+
+					
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">居游价格</label>
