--- a/app/02device/views/module.html
+++ b/app/02device/views/module.html
@@ -1,27 +1,26 @@
-<div class="col-xs-10 col-xs-offset-1 form-horizontal" >
-	
+<div class="col-xs-10 col-xs-offset-1 form-horizontal">
+
 	<div class="form-group">
 		<label class="col-xs-2 control-label">机器码</label>
 		<div class="col-xs-6">
-			<input type="text" class="form-control" placeholder="请输入机器码"
-			ng-model="obj.code"
-			>
+			<input type="text" class="form-control" placeholder="请输入机器码" ng-model="obj.code">
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-xs-2 control-label">景区</label>
 		<div class="col-xs-6">
-			<select class="form-control" ng-model="obj.view" 
-              ng-options="view.code as view.name for view in viewarr"
-              ng-disabled="lock"
-            >
-            </select>
+			<!--<select class="form-control" ng-model="obj.view" ng-options="view.code as view.name for view in viewarr" ng-disabled="lock">
+            </select>-->
+			<ui-select ng-model="obj.view" theme="bootstrap" ng-disabled="lock">
+				<ui-select-match placeholder="请选择一个景区">{{$select.selected.name}}</ui-select-match>
+				<ui-select-choices repeat="item.code as item in viewarr | filter: $select.search">
+					<span ng-bind-html="item.name | highlight: $select.search"></span>
+				</ui-select-choices>
+			</ui-select>
 		</div>
 		<div class="col-xs-2">
-			<button type="button" class="btn btn-primary " 
-		    ng-click="remove()" ng-show="obj.id != ''"
-		    >
+			<button type="button" class="btn btn-primary " ng-click="remove()" ng-show="obj.id != ''">
 		    解除绑定
 		    </button>
 		</div>
@@ -30,27 +29,21 @@
 	<div class="form-group">
 		<label class="col-xs-2 control-label">密码</label>
 		<div class="col-xs-6">
-			<input type="text" class="form-control" placeholder="请输入密码"
-			ng-model="obj.pas"
-			>
+			<input type="text" class="form-control" placeholder="请输入密码" ng-model="obj.pas">
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-xs-2 control-label">备注</label>
 		<div class="col-xs-6">
-			<input type="text" class="form-control" placeholder="请输入密码"
-			ng-model="obj.remarks"
-			>
+			<input type="text" class="form-control" placeholder="请输入密码" ng-model="obj.remarks">
 		</div>
 	</div>
 
 	<div class="form-group">
 		<label class="col-xs-2 control-label">票机类型</label>
 		<div class="col-xs-6">
-			<select class="form-control" ng-model="obj.type" 
-              ng-options="type.code as type.name for type in typearr"
-            >
+			<select class="form-control" ng-model="obj.type" ng-options="type.code as type.name for type in typearr">
             </select>
 		</div>
 	</div>
@@ -149,11 +142,7 @@
 		</div>
 	</div>
 
-	<button 
-    type="button" 
-    class="btn btn-primary btn-lg btn-block" 
-    ng-click="gogo()"
-    >
+	<button type="button" class="btn btn-primary btn-lg btn-block" ng-click="gogo()">
     提交吧！黄同学
     </button>
 
