富文本编辑器

--- a/app/07product/views/p_integral.html
+++ b/app/07product/views/p_integral.html
@@ -3,7 +3,7 @@
 		<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">最高可用积分</label>
 			<div class="col-sm-4 col-xs-12">
-				<input type="number" min="0" name="fxbt" class="form-control form-inline" placeholder="积分" ng-model="obj.integral_price" />
+				<input type="number" name="fxbt" class="form-control form-inline" placeholder="积分"  min="0" ng-model="obj.integral_price" />
 			</div>
 			<div class="col-sm-5 mt10">
 				<font face="Courier" class="text-danger">此名称用于设置最高可用积分</font>
