--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -59,7 +59,8 @@
 					<br/>
 				<div class="col-xs-12 form-group" >
 					<div class="col-xs-2">
-						<label for="lrl" class="pull-right text-right mt10">利润&nbsp;&nbsp;&nbsp;&nbsp;</label>
+						<label type="number" for="lrl" class="pull-right text-right mt10">利润&nbsp;&nbsp;&nbsp;&nbsp;</label>
+						
 					</div>
 					<div class="col-xs-5">
 						<div class="input-group col-xs-12">
