--- a/app/09place/views/p_baseinfo.html
+++ b/app/09place/views/p_baseinfo.html
@@ -49,7 +49,7 @@
 		<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">简介</label>
 			<div class="col-sm-9">
-				<div text-angular ng-model="placeobj.content"></div>
+				<div class="ueditor" ng-model="placeobj.content"></div>
 			</div>
 		</div>
 		
