--- a/app/09place/views/p_baseinfo.html
+++ b/app/09place/views/p_baseinfo.html
@@ -162,6 +162,15 @@
 		</div>
 
 		<div class="form-group" >
+			<label class="col-sm-3 col-xs-12 control-label">产品分类</label>
+			<div class="col-sm-9 col-xs-12">
+				<select class="form-control" ng-model="placeobj.view_type" ng-options="data.code as data.label for data in page.typelist">
+					<option value="">请选择</option>
+				</select>
+			</div>
+		</div>
+
+		<div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">星级</label>
 			<div class="col-sm-9 col-xs-12">
 				<select class="form-control" ng-model="placeobj.star" >
