--- a/app/09place/views/p_store.html
+++ b/app/09place/views/p_store.html
@@ -20,14 +20,14 @@
 		</div>
 
 
-		<div class="form-group" >
+		<!-- <div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">类型</label>
 			<div class="col-sm-9 col-xs-12">
 				<select class="form-control" ng-model="storeobj.view_type" ng-change="selection(data.code)" ng-options="data.code as data.label for data in typedatas">
 					<option value="">请选择</option>
 				</select>
 			</div>
-		</div>
+		</div> -->
 
         <div class="form-group" >
 			<label class="col-sm-3 col-xs-12 control-label">频道(行业)</label>
