商客专用设置红包上限不能大于利润

--- a/app/22busscustomer/views/addinformation.html
+++ b/app/22busscustomer/views/addinformation.html
@@ -17,7 +17,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">资讯标题</label>
    						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入标题"
+							<input type="text" class="form-control" placeholder="请输入资讯标题"
 							ng-model="info.title"
 							>
 						</div>
@@ -57,7 +57,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">发布人</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入标题"
+							<input type="text" class="form-control" placeholder="请输入发布人"
 							ng-model="info.create_by"
 							>
 						</div>
@@ -80,7 +80,7 @@
                     <div class="form-group">
 						<label class="col-xs-3 control-label">排序</label>
 						<div class="col-xs-6">
-							<input type="text" class="form-control" placeholder="请输入阅读次数"
+							<input type="text" class="form-control" placeholder="请输入排序数字"
 							ng-model="info.asort"
 							>
 						</div>
