--- a/app/07product/views/tkttypecreate.html
+++ b/app/07product/views/tkttypecreate.html
@@ -29,7 +29,7 @@
 	</div>-->
 
     <div class="form-group">
-		<label class="col-xs-2 control-label">所属景区</label>
+		<label class="col-xs-2 control-label">所属景区123</label>
 		<div class="col-xs-6">
 			<p class="form-control-static">{{objt.placename}}
 				<!-- <span ng-show="objt.placecode != null">[</span> -->
