--- a/app/21card/views/cardorderlist.html
+++ b/app/21card/views/cardorderlist.html
@@ -95,8 +95,8 @@
         <td class="text-center">{{obj.card_typename}}</td>
      	<td class="text-center">{{obj.order_typename}}</td>
 	    <td class="text-center">
-	    	<a ng-click="ticketinfo(obj.code)" class="btn btn-success btn-xs" ng-if="obj.order_type=='1'">票信息</a>
-	    	<a ng-click="cardinfo(obj.code)" class="btn btn-warning btn-xs" ng-if="obj.order_type=='2'">卡信息</a>
+	    	<a ng-click="ticketinfo(obj.code)" class="btn btn-success btn-xs">票信息</a>
+	    	<a ng-click="cardinfo(obj.code)" class="btn btn-warning btn-xs">卡信息</a>
 	      	<a ng-click="orderinfo(obj)" class="btn btn-info btn-xs">订单详情</a>
 	    </td>
     </tr>
