'添加卡产品红包列表'

--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -178,7 +178,7 @@
 	    <div class="col-xs-9 form-inline">
 		    <label class="radio-inline">
 			 <input type="radio" name="rebate_type" value="0"
-				  ng-model="obj.rebate_type"
+				  ng-model="obj.rebate_type" ng-click="change()"
 				  >否</label>
 
 		    <label class="radio-inline">
@@ -187,7 +187,7 @@
 				  >是</label>
 		    &nbsp;&nbsp;&nbsp;&nbsp;
 			<select class="form-control" ng-model="obj.rebate_code" ng-show="obj.rebate_type=='1'"
-              ng-options="cardtype.value as cardtype.label for cardtype in cardtypearr"
+              ng-options="redtype.code as redtype.name for redtype in redtypearr"
             >
             <option value="">请选择</option>
             </select>
