--- a/app/26ylb/views/addYlbArtical.html
+++ b/app/26ylb/views/addYlbArtical.html
@@ -50,7 +50,7 @@
           </select>
         </div>
       </div>
-      <div class="form-group">
+      <!--<div class="form-group">
         <label class="col-lg-4 control-label">景区logo:</label>
           <div class="col-md-5">
             <img ng-src="{{infoobj.logo}}" width="100%" height="200" ng-model="infoobj.logo">
@@ -65,7 +65,7 @@
                 </li>
               </ul>
         </div>
-      </div>
+      </div>-->
       <div class="form-group">
         <label class="col-lg-4 control-label">景区图片:</label>
           <div class="col-md-5">
