--- a/app/26ylb/views/addYlbCategory.html
+++ b/app/26ylb/views/addYlbCategory.html
@@ -39,6 +39,25 @@
                   <input type="text" class="form-control" placeholder="必填" ng-model="obj.sort">
                 </div>
               </div>
+              <div class="form-group">
+                <label class="col-lg-3 control-label">附加信息:</label>
+              </div>
+              <div class="form-group">
+                <label class="col-lg-3 control-label">logo:</label>
+                  <div class="col-md-5">
+                    <img ng-src="{{infoobj.logo}}" width="100%" height="200" ng-model="infoobj.logo">
+                      <input type="file" nv-file-select uploader="uploader" / ng-hide="hide===true" ><br/>
+                      <ul class="list-group">
+                        <li class="list-group-item" ng-repeat="item in uploader.queue">
+                          文件名: <span ng-bind="item.file.name"></span>
+                          <button type="button" class="btn btn-default btn-xs"  ng-click="item.upload()"><span class="glyphicon glyphicon-upload"></span> 上传</button>
+                          <div class="progress mt10">
+                            <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
+                          </div>
+                        </li>
+                      </ul>
+                </div>
+              </div>
             
 
             <div class="form-group">
