--- a/app/26ylb/views/viewarticallist.html
+++ b/app/26ylb/views/viewarticallist.html
@@ -4,7 +4,7 @@
         <div class="form-group form-inline">
             <div class="col-sm-12">
                   <label for="inputLottry" class="control-label">文章列表</label>
-                  <button type="button" class="btn btn-primary search pull-right" ng-click="add()">添加文章</button>
+                  <button type="button" class="btn btn-primary search pull-right" ng-click="add()">添加景区文章</button>
                   <!-- <button type="button" class="btn btn-primary search pull-right" ng-click="edit()">编辑头条文章</button> -->
 
             </div>
