--- a/app/26ylb/views/addViewArtical.html
+++ b/app/26ylb/views/addViewArtical.html
@@ -2,11 +2,11 @@
  
  <div class="col-md-10 col-md-offset-1">
  <div class="panel panel-info">
- <div class="panel-heading text-center">添加文章</div>
+ <div class="panel-heading text-center">添加景区详情</div>
  <div class="panel-body">
       <div class="form-group">
-        <label class="col-lg-4 control-label">分类:</label>
-        <div class="col-lg-5">
+        <label class="col-lg-3 control-label">上级分类:</label>
+        <div class="col-lg-6">
           <ui-select ng-model="obj.category_id" theme="bootstrap" ng-change="change(obj.category_id)">
             <ui-select-match placeholder="选择上级分类..">{{$select.selected.title}}</ui-select-match>
             <ui-select-choices repeat="item.id as item in pid_list | filter: $select.search">
@@ -17,58 +17,32 @@
       </div>
 
       <div class="form-group">
-        <label class="col-lg-4 control-label">文章标题:</label>
-        <div class="col-lg-5">
+        <label class="col-lg-3 control-label">景区名称:</label>
+        <div class="col-lg-6">
           <input type="text" class="form-control" placeholder="必填" ng-model="obj.title">
         </div>
       </div>
       
       <div class="form-group">
-        <label class="col-lg-4 control-label">排序:</label>
-        <div class="col-lg-5">
+        <label class="col-lg-3 control-label">排序:</label>
+        <div class="col-lg-6">
           <input type="text" class="form-control" placeholder="必填" ng-model="obj.sort">
         </div>
       </div>
       <div class="form-group">
         <label class="col-lg-3 control-label">附加信息:</label>
       </div>
-      <div class="form-group">
+      
+      <!--<div class="form-group">
         <label class="col-lg-4 control-label">景区标题:</label>
         <div class="col-lg-5">
           <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.viewtitle">
         </div>
-      </div>
-      <div class="form-group">
-        <label class="col-lg-4 control-label">景区类型:</label>
-        <div class="col-lg-5">
-          <select class="form-control" ng-model="infoobj.viewtype" ng-change="selection(info.ad_type)">
-              <option value="">请选择</option>
-              <option value="0">中餐</option>
-              <option value="1">西餐</option>
-              <option value="2">外餐</option>
-              <option value="3">快餐</option>                      
-          </select>
-        </div>
-      </div>
-      <!--<div class="form-group">
-        <label class="col-lg-4 control-label">景区logo:</label>
-          <div class="col-md-5">
-            <img ng-src="{{infoobj.logo}}" width="100%" height="200" ng-model="infoobj.logo">
-              <input type="file" nv-file-select uploader="uploader" / ng-hide="hide===true" ><br/>
-              <ul class="list-group">
-                <li class="list-group-item" ng-repeat="item in uploader.queue">
-                  文件名: <span ng-bind="item.file.name"></span>
-                  <button type="button" class="btn btn-default btn-xs"  ng-click="item.upload()"><span class="glyphicon glyphicon-upload"></span> 上传</button>
-                  <div class="progress mt10">
-                    <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
-                  </div>
-                </li>
-              </ul>
-        </div>
       </div>-->
+  
       <div class="form-group">
-        <label class="col-lg-4 control-label">景区图片:</label>
-          <div class="col-md-5">
+        <label class="col-lg-3 control-label">景区封面图:</label>
+          <div class="col-md-6">
             <img ng-src="{{infoobj.picture1}}" width="100%" height="200" ng-model="infoobj.picture1">
               <input type="file" nv-file-select uploader="uploader1" / ng-hide="hide===true" ><br/>
               <ul class="list-group">
@@ -79,30 +53,66 @@
                     <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader1.progress + '%' }"></div>
                   </div>
                 </li>
+                <font face="Courier" class="text-danger">注:上传图片尺寸为710 * 320</font>         
+
               </ul>
         </div>
       </div>
       <div class="form-group">
-        <label class="col-lg-4 control-label">景区介绍:</label>
-        <div class="col-lg-5">
-          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.info">
+        <label class="col-lg-3 control-label">详情页头图:</label>
+          <div class="col-md-6">
+            <img ng-src="{{infoobj.picture1}}" width="100%" height="200" ng-model="infoobj.headimg">
+              <input type="file" nv-file-select uploader="uploader" / ng-hide="hide===true" ><br/>
+              <ul class="list-group">
+                <li class="list-group-item" ng-repeat="item in uploader.queue">
+                  文件名: <span ng-bind="item.file.name"></span>
+                  <button type="button" class="btn btn-default btn-xs"  ng-click="item.upload()"><span class="glyphicon glyphicon-upload"></span> 上传</button>
+                  <div class="progress mt10">
+                    <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
+                  </div>
+                </li>
+                <font face="Courier" class="text-danger">注:上传图片尺寸为720 * 360</font>         
+
+              </ul>
         </div>
       </div>
+      
       <div class="form-group">
-        <label class="col-lg-4 control-label">景区电话:</label>
-        <div class="col-lg-5">
+        <label class="col-lg-3 control-label">景区电话:</label>
+        <div class="col-lg-6">
           <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.mobile">
         </div>
       </div>
       <div class="form-group">
-        <label class="col-lg-4 control-label">投诉电话:</label>
-        <div class="col-lg-5">
+        <label class="col-lg-3 control-label">投诉电话:</label>
+        <div class="col-lg-6">
           <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.tel">
         </div>
       </div>
       <div class="form-group">
-        <label class="col-lg-4 control-label">景区美图:</label>
-        <div class="col-md-5">
+        <label class="col-lg-3 control-label">景区地址:</label>
+        <div class="col-lg-6">
+          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.adress">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-lg-3 control-label">景区活动:</label>
+        <div class="col-lg-6">
+          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.activity">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-lg-3 control-label">景区介绍:</label>
+        <div class="col-xs-6">
+          <div class="ueditor" ng-model="infoobj.info"></div>      
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-lg-3 control-label">景区美图:</label>
+        <div class="col-xs-6">
+          <div class="ueditor" ng-model="infoobj.picture2"></div>      
+        </div>
+        <!--<div class="col-md-5">
             <img ng-src="{{infoobj.picture2}}" width="100%" height="200" ng-model="infoobj.picture2">
               <input type="file" nv-file-select uploader="uploader2" / ng-hide="hide===true" ><br/>
               <ul class="list-group">
@@ -114,66 +124,21 @@
                   </div>
                 </li>
               </ul>
-        </div>  
+        </div>  -->
       </div>
       <div class="form-group">
-        <label class="col-lg-4 control-label">全息虚拟游:</label>
-        <div class="col-lg-5">
-          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.travle">
+        <label class="col-lg-3 control-label">全息虚拟游:</label>
+        <div class="col-xs-6">
+          <div class="ueditor" ng-model="infoobj.travle"></div>      
         </div>
       </div>
       <div class="form-group">
-        <label class="col-lg-4 control-label">景区航拍:</label>
-        <div class="col-md-5">
-            <img ng-src="{{infoobj.picture3}}" width="100%" height="200" ng-model="infoobj.picture3">
-              <input type="file" nv-file-select uploader="uploader3" / ng-hide="hide===true" ><br/>
-              <ul class="list-group">
-                <li class="list-group-item" ng-repeat="item in uploader3.queue">
-                  文件名: <span ng-bind="item.file.name"></span>
-                  <button type="button" class="btn btn-default btn-xs"  ng-click="item.upload()"><span class="glyphicon glyphicon-upload"></span> 上传</button>
-                  <div class="progress mt10">
-                    <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader3.progress + '%' }"></div>
-                  </div>
-                </li>
-              </ul>
+        <label class="col-lg-3 control-label">景区航拍:</label>
+        <div class="col-xs-6">
+          <div class="ueditor" ng-model="infoobj.picture3"></div>      
         </div>
       </div>
-      <div class="form-group">
-        <label class="col-lg-4 control-label">景区地址:</label>
-        <div class="col-lg-5">
-          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.adress">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-lg-4 control-label">菜系:</label>
-        <div class="col-lg-5">
-          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.cuisine">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-lg-4 control-label">提供服务:</label>
-        <div class="col-lg-5">
-          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.service">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-lg-4 control-label">推荐套房:</label>
-        <div class="col-lg-5">
-          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.suite">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-lg-4 control-label">价格:</label>
-        <div class="col-lg-5">
-          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.price">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-lg-4 control-label">景区活动:</label>
-        <div class="col-lg-5">
-          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.activity">
-        </div>
-      </div>
+      
       <div class="form-group">
         <label class="col-lg-5 control-label"></label>        
         <div class="col-lg-3">
