--- a/app/26ylb/views/otherarticallist.html
+++ b/app/26ylb/views/otherarticallist.html
@@ -3,8 +3,8 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-12">
-                  <label for="inputLottry" class="control-label">景区列表</label>
-                  <button type="button" class="btn btn-primary search pull-right" ng-click="add()">添加景区详情</button>
+                  <label for="inputLottry" class="control-label">文章列表</label>
+                  <button type="button" class="btn btn-primary search pull-right" ng-click="add()">添加景区文章</button>
                   <!-- <button type="button" class="btn btn-primary search pull-right" ng-click="edit()">编辑头条文章</button> -->
 
             </div>
@@ -15,7 +15,7 @@
     <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-2 text-center">景区名称</th>
+        <th class="col-md-2 text-center">分类名称</th>
         <th class="col-md-1 text-center">上级id</th>
         <th class="col-md-2 text-center">排序</th>
         <th class="col-md-1 text-center">状态</th>  
