--- a/app/26ylb/views/addTrafficArtical.html
+++ b/app/26ylb/views/addTrafficArtical.html
@@ -5,7 +5,7 @@
  <div class="panel-heading text-center">添交通详情</div>
  <div class="panel-body">
       <div class="form-group">
-        <label class="col-lg-3 control-label">上级分类:</label>
+        <label class="col-lg-3 control-label">分类id:</label>
         <div class="col-lg-6">
           <ui-select ng-model="obj.category_id" theme="bootstrap" ng-change="change(obj.category_id)">
             <ui-select-match placeholder="选择上级分类..">{{$select.selected.title}}</ui-select-match>
