--- a/app/26ylb/views/trafficarticallist.html
+++ b/app/26ylb/views/trafficarticallist.html
@@ -17,8 +17,7 @@
       <tr>
         <th class="col-md-2 text-center">交通名称</th>
         <th class="col-md-2 text-center">分类id</th>        
-        <th class="col-md-2 text-center">精度</th>
-        <th class="col-md-2 text-center">纬度</th>
+        <th class="col-md-2 text-center">排序</th>
         <th class="col-md-1 text-center">类型</th>        
         <th class="col-md-1 text-center">状态</th>             
         <th class="col-md-2 text-center">操作</th>
@@ -28,10 +27,9 @@
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.title}}</td>
         <td class="text-center">{{obj.category_id}}</td>        
-        <td class="text-center">{{obj.data.longitude}}</td>
-        <td class="text-center">{{obj.data.latitude}}</td>
+        <td class="text-center">{{obj.sort}}</td>
         <td class="text-center">
-            <p ng-show="obj.type == 2">交通</p>
+            <p ng-show="obj.type == 8">交通</p>
         </td>        
         <td class="text-center">
           <p class="" ng-show="obj.state == 1">已启动</p>
