更改字段名

--- a/app/26ylb/views/addViewArtical.html
+++ b/app/26ylb/views/addViewArtical.html
@@ -92,7 +92,7 @@
       <div class="form-group">
         <label class="col-lg-3 control-label">景区地址:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.adress">
+          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.address">
         </div>
       </div>
       <div class="form-group">
