--- a/app/26ylb/views/addHistoryArtical.html
+++ b/app/26ylb/views/addHistoryArtical.html
@@ -2,13 +2,13 @@
  
  <div class="col-md-10 col-md-offset-1">
  <div class="panel panel-info">
- <div class="panel-heading text-center">添交通详情</div>
+ <div class="panel-heading text-center">添加历史风貌详情</div>
  <div class="panel-body">
       <div class="form-group">
         <label class="col-lg-3 control-label">分类id:</label>
         <div class="col-lg-6">
           <ui-select ng-model="obj.category_id" theme="bootstrap" ng-change="change(obj.category_id)">
-            <ui-select-match placeholder="选择上级分类..">{{$select.selected.title}}</ui-select-match>
+            <ui-select-match placeholder="选择分类..">{{$select.selected.title}}</ui-select-match>
             <ui-select-choices repeat="item.id as item in pid_list | filter: $select.search">
               <span ng-bind-html="item.title | highlight: $select.search"></span>
             </ui-select-choices>
@@ -17,7 +17,7 @@
       </div>
 
       <div class="form-group">
-        <label class="col-lg-3 control-label">交通名称:</label>
+        <label class="col-lg-3 control-label">历史风貌名称:</label>
         <div class="col-lg-6">
           <input type="text" class="form-control" placeholder="必填" ng-model="obj.title">
         </div>
@@ -26,33 +26,25 @@
       <div class="form-group">
         <label class="col-lg-3 control-label">排序:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="obj.sort">
+          <input type="" class="form-control" placeholder="必填" ng-model="obj.sort">
         </div>
       </div>
       <div class="form-group">
         <label class="col-lg-3 control-label">附加信息:</label>
       </div>
       
-
       <div class="form-group">
-        <label class="col-lg-3 control-label">精度:</label>
+        <label class="col-lg-3 control-label">简介:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.longitude">
+            <div class="ueditor" ng-model="infoobj.info"></div>      
         </div>
       </div>
-      
       <div class="form-group">
-        <label class="col-lg-3 control-label">纬度:</label>
+        <label class="col-lg-3 control-label">视频地址:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.latitude">
+          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.net">
         </div>
-      </div> 
-      <div class="form-group">
-        <label class="col-lg-3 control-label">详细地理位置:</label>
-        <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.address">
-        </div>
-      </div> 
+      </div>
       <div class="form-group">
         <label class="col-lg-5 control-label"></label>        
         <div class="col-lg-3">
@@ -60,6 +52,14 @@
           <button class="btn btn-default btn-rounded" ng-click="cancel()">取消</button>
         </div>     
       </div>
+      <!--<div class="form-group">
+        <div id="allmap"></div>
+        <div id="r-result">请输入:<input type="text" id="suggestId" size="20" value="百度" style="width:150px;" /></div>
+        <div id="searchResultPanel" style="border:1px solid #C0C0C0;width:150px;height:auto; display:none;"></div>
+      </div>
+
+      <div class="BMap_mask" style="position: absolute; left: 0px; top: 0px; z-index: 9; overflow: hidden; user-select: none; width: 1376px; height: 300px;"></div>
+-->
 
     </div>
     </div>
