--- a/app/26ylb/views/addAccommodationArtical.html
+++ b/app/26ylb/views/addAccommodationArtical.html
@@ -108,7 +108,12 @@
             <div class="ueditor" ng-model="infoobj.price"></div>      
         </div>
       </div>
-  
+       <div class="form-group">
+        <label class="col-lg-3 control-label">折扣:</label>
+        <div class="col-lg-6">
+          <input type="text" class="form-control" placeholder="提供服务" ng-model="infoobj.cut">
+        </div>
+      </div>  
       <div class="form-group">
         <label class="col-lg-5 control-label"></label>        
         <div class="col-lg-3">
