--- a/app/26ylb/views/addFoodArtical.html
+++ b/app/26ylb/views/addFoodArtical.html
@@ -113,7 +113,19 @@
         <div class="col-lg-6">
           <input type="text" class="form-control" placeholder="提供服务" ng-model="infoobj.service">
         </div>
-      </div> 
+      </div>
+      <div class="form-group">
+        <label class="col-lg-3 control-label">咨询电话:</label>
+        <div class="col-lg-6">
+          <input type="text" class="form-control" placeholder="提供服务" ng-model="infoobj.tel">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-lg-3 control-label">折扣:</label>
+        <div class="col-lg-6">
+          <input type="text" class="form-control" placeholder="提供服务" ng-model="infoobj.cut">
+        </div>
+      </div>  
       <div class="form-group">
         <label class="col-lg-5 control-label"></label>        
         <div class="col-lg-3">
