--- a/app/26ylb/views/addLeisureArtical.html
+++ b/app/26ylb/views/addLeisureArtical.html
@@ -108,6 +108,12 @@
           <input type="text" class="form-control" placeholder="提供服务" ng-model="infoobj.fuwu">
         </div>
       </div> 
+       <div class="form-group">
+        <label class="col-lg-3 control-label">折扣:</label>
+        <div class="col-lg-6">
+          <input type="text" class="form-control" placeholder="提供服务" ng-model="infoobj.cut">
+        </div>
+      </div>  
       <div class="form-group">
         <label class="col-lg-5 control-label"></label>        
         <div class="col-lg-3">
