--- a/app/26ylb/views/categorylist.html
+++ b/app/26ylb/views/categorylist.html
@@ -35,7 +35,7 @@
           <a ng-click="edit(obj.id)" class="btn btn-info btn-xs">编辑</a>
           <a ng-show="obj.state == 2" ng-click="start(obj.id)" class="btn btn-success btn-xs">启动</a>
           <a ng-show="obj.state == 1" ng-click="disable(obj.id)" class="btn btn-warning btn-xs">禁用</a> 
-          <a ng-show="obj.state == 1" ng-click="delete(obj.id)" class="btn btn-danger btn-xs">删除</a>                           
+          <a ng-click="delete(obj.id)" class="btn btn-danger btn-xs">删除</a>                           
         </td>
       </tr>
     </tbody>
