更改订单列表和预约模块加字段

--- a/app/22busscustomer/views/setappointment.html
+++ b/app/22busscustomer/views/setappointment.html
@@ -97,6 +97,13 @@
 						</div>
 					</div>
 
+					<div class="form-group">
+						<label class="col-xs-3 control-label">预约须知</label>
+						<div class="col-xs-6">
+							<textarea class="form-control" rows="6" ng-model="info.book_info" placeholder="请输入预约须知"></textarea>
+						</div>
+					</div>
+
 					
 
 				</div>
