重做预约模块

--- a/app/07product/views/p_baseinfo.html
+++ b/app/07product/views/p_baseinfo.html
@@ -238,7 +238,10 @@
 				</label>
 			</div>
 			<div class="col-sm-6 mt10">
-				<font face="Courier" class="text-danger">对接产品需要到第三方系统下单，请选择需要确认</font>
+				<font face="Courier" class="text-danger">对接产品需要到第三方系统下单，请选择需要确认
+					<br>
+					需发送卡号,卡密并激活的产品,请选择需要确认
+				</font>
 			</div>
 		</div>
 
