--- a/app/22busscustomer/views/addlimit.html
+++ b/app/22busscustomer/views/addlimit.html
@@ -15,7 +15,7 @@
 					<div class="form-group">
 						<label class="col-xs-3 control-label">限制人数</label>
 						<div class="col-xs-6">
-						<input rows="4" class="form-control" placeholder="限制人数" ng-model="info.num">
+						<input rows="4" class="form-control" placeholder="限制人数" ng-model="info.limits">
 						</div>
 					</div>
 					 			
