--- a/app/22busscustomer/views/assignauthority.html
+++ b/app/22busscustomer/views/assignauthority.html
@@ -7,7 +7,7 @@
     <div class="panel-body">
     <div class="col-sm-12" style="height: 40px">
         <div class="form-group form-inline ">
-            <input type="text" class="form-control" ng-model="searchinfo.bind_company_code" placeholder="一级商客账号">
+            <input type="text" class="form-control" ng-model="searchinfo.company_code" placeholder="一级商客账号">
             <button type="button" class="btn btn-primary pull-right" ng-click="saveauthority()">添加</button>
         </div>
     </div>
