--- a/app/22busscustomer/views/maxpeople.html
+++ b/app/22busscustomer/views/maxpeople.html
@@ -28,7 +28,7 @@
         <td class="text-center">{{obj.code}}</td>
         <th class="col-md-4 text-center">{{10}}</th>         
         <td class="text-center">
-          <a ng-click="limit(obj.id)" class="btn btn-danger">限制人数</a>
+          <a ng-click="limit(obj.code)" class="btn btn-danger">限制人数</a>
           <!--<span class="glyphicon glyphicon-remove" aria-hidden=""></span>-->
         </td>
       </tr>
