--- a/app/07product/views/productinfobaseinfo.html
+++ b/app/07product/views/productinfobaseinfo.html
@@ -75,6 +75,16 @@
 			</div>
 		</div>
 
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">产品排序</label>
+			<div class="col-sm-4 col-xs-12">
+				<p class="form-control-static">{{saleobj.asort}}</p>
+			</div>
+			<div class="col-sm-6 mt10">
+				<font face="Courier" class="text-danger">此名称用于产品列表排列先后顺序</font>
+			</div>
+		</div>
+
 		<!-- ng-disabled="saleobj.id != ''" ng-change="changeCategory()" -->
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">产品分类</label>
